--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootswatch": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
