--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,17 @@
 name: My Components Testing
 
-on: [pull_request]
+on: 
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         # Or run `node --version` in the GitHub Actions runner to see the current Node.js version
         # Or run `nvm --version` in the GitHub Actions runner to see the current Node.js version
@@ -24,9 +28,12 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{matrix.node-version}}
+        cache: 'npm'
 
     - name: Install Dependencies
       run: npm install
 
     - name: Run Jest Tests
+      run: npm ci
+      run: npm run build --if-present
       run: npm test
