--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
       run: npm install
 
     - name: Run Jest Tests
-      run: npm ci
-      run: npm run build --if-present
-      run: npm test
+      run: |
+        npm ci
+        npm run build --if-present
+        npm test
