--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         # Or run `node --version` in the GitHub Actions runner to see the current Node.js version
         # Or run `nvm --version` in the GitHub Actions runner to see the current Node.js version
@@ -28,13 +28,13 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{matrix.node-version}}
-        cache: 'npm'
+        cache: 'yarn'
 
     - name: Install Dependencies
-      run: npm install
+      run: yarn install
 
     - name: Run Jest Tests
       run: |
-        npm ci
-        npm run build --if-present
-        npm test
+        yarn ci
+        yarn build --if-present
+        yarn test
