--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0"
   },
@@ -20,7 +18,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
