--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "sass": "^1.51.0",
-    "sass-loader": "^12.6.0"
+    "sass-loader": "^12.6.0",
+    "ts-jest": "^29.1.2"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^29.5.12",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -19,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^4.0.1",
+    "selenium-webdriver": "^4.19.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -26,9 +29,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:e2e": "react-scripts test --testMatch=**\\.test\\.e2e\\.ts",
     "eject": "react-scripts eject",
     "pre-ci": "rm -rf node_modules",
     "ci": "yarn install --immutable --immutable-cache --check-cache"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "node:events": "<rootDir>/node_modules/events/"
+    }
   },
   "eslintConfig": {
     "extends": [
