Add e2e to continus integrration file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,3 +39,9 @@ jobs:
       run: |
         yarn build --if-present
         yarn test
+    
+    - name: Run e2e Tests
+      run: |
+        yarn build --if-present
+        yarn start
+        yarn test:e2e
