--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,22 +35,18 @@ jobs:
         yarn  pre-ci
         yarn ci
 
-    - name: Build App
-      run: yarn build --if-present  
-    
-    - name: Run Jest Tests
-      run: yarn test
+    # - name: Build App
+    #  run: yarn build --if-present  
     
     - name: Install ChromeDriver
       run: |
-        wget https://chromedriver.storage.googleapis.com/LATEST_RELEASE -O LATEST_RELEASE
-        CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d '.' -f 1)
-        CHROME_DRIVER_VERSION=$(cat LATEST_RELEASE)
-        wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
+        curl -sL https://chromedriver.storage.googleapis.com/LATEST_RELEASE | awk '{print $1}' | wget -qi - -O chromedriver_linux64.zip
         unzip chromedriver_linux64.zip -d /usr/local/bin
         chmod +x /usr/local/bin/chromedriver
         if: runner.os == 'Linux'
-    
+
+    - name: Run Jest Tests (Unit Tests)
+      run: yarn test
+
     - name: Run Selenium e2e Tests
-      run: |
-        yarn test:e2e
+      run: yarn test:e2e
