--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,10 @@ jobs:
       run: |
         curl -sL https://chromedriver.storage.googleapis.com/LATEST_RELEASE | awk '{print $1}' | wget -qi - -O chromedriver_linux64.zip
         unzip chromedriver_linux64.zip -d /usr/local/bin
-        ls -la /usr/local/bin/chromedriver_linux64
+        ls -la /usr/local/bin/
         chmod +x /usr/local/bin/chromedriver
+
+
         if: runner.os == 'Linux'
 
     - name: Run Jest Tests (Unit Tests)
