--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
         echo "Chrome versions"
         google-chrome --version
         echo "Listing chrome files"
-        ls -l /usr/bin/
+        ls -l /usr/bin/ | grep "google-chrome"
         echo " *********** "
         ls -l /usr/bin/google-chrome
         echo "Chromedriver versions"
