--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Install Chrome and ChromeDriver
       run: |
         # Install Chrome
-        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        wget https://dl.google.com/linux/direct/google-chrome-123.0.6312.122_amd64.deb
         sudo dpkg -i google-chrome-stable_current_amd64.deb
         
         # Install ChromeDriver
