--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,16 +42,22 @@ jobs:
     - name: Install Chrome and ChromeDriver
       run: |
         # Install Chrome
-        wget https://dl.google.com/linux/direct/google-chrome-123.0.6312.122_amd64.deb
-        sudo dpkg -i google-chrome-stable_current_amd64.deb
+        # wget https://dl.google.com/linux/direct/google-chrome-123.0.6312.122_amd64.deb
+        # sudo dpkg -i google-chrome-stable_current_amd64.deb
         
         # Install ChromeDriver
         wget https://chromedriver.storage.googleapis.com/LATEST_RELEASE -O LATEST_RELEASE
         CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d '.' -f 1)
         CHROME_DRIVER_VERSION=$(cat LATEST_RELEASE)
-        wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
-        unzip chromedriver_linux64.zip -d /usr/local/bin
-        chmod +x /usr/local/bin/chromedriver
+      
+    - name: test
+      run: |
+        echo $CHROME_VERSION
+        echo $CHROME_VERSION
+        
+        #wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
+        #unzip chromedriver_linux64.zip -d /usr/local/bin
+        #chmod +x /usr/local/bin/chromedriver
 
         # Validate versions
         echo "Chrome versions"
