--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,12 +50,12 @@ jobs:
         # wget https://storage.googleapis.com/chrome-for-testing-public/LATEST_RELEASE -O LATEST_RELEASE
         # CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d '.' -f 1)
         CHROME_VERSION=$(google-chrome --version)
-        CHROME_DRIVER_VERSION=$CHROME_VERSION        
+        CHROME_DRIVER_VERSION=$(CHROME_VERSION | awk '{print $3}')
         echo "CHROME_VERSION: $CHROME_VERSION"
         echo "CHROME_DRIVER_VERSION $CHROME_DRIVER_VERSION"
         
         # wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
-        wget https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chromedriver-linux64.zip
+        wget https://storage.googleapis.com/chrome-for-testing-public/$CHROME_DRIVER_VERSION/linux64/chromedriver-linux64.zip
         unzip chromedriver_linux64.zip -d /usr/local/bin
         chmod +x /usr/local/bin/chromedriver
 
