--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         # wget https://storage.googleapis.com/chrome-for-testing-public/LATEST_RELEASE -O LATEST_RELEASE
         # CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d '.' -f 1)
         CHROME_VERSION=$(google-chrome --version)
-        CHROME_DRIVER_VERSION=$(CHROME_VERSION | awk '{print $3}')
+        CHROME_DRIVER_VERSION=$(echo "$CHROME_VERSION" | awk '{print $3}')
         echo "CHROME_VERSION: $CHROME_VERSION"
         echo "CHROME_DRIVER_VERSION $CHROME_DRIVER_VERSION"
         
