--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         
         # wget https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
         wget https://storage.googleapis.com/chrome-for-testing-public/$CHROME_DRIVER_VERSION/linux64/chromedriver-linux64.zip
-        unzip chromedriver_linux64.zip -d /usr/local/bin
+        unzip chromedriver-linux64.zip -d /usr/local/bin
         chmod +x /usr/local/bin/chromedriver
 
         # Validate versions
