--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,4 +75,6 @@ jobs:
       run: yarn test
 
     - name: Run Selenium e2e Tests
-      run: yarn test:e2e
+      run: | 
+        yarn start
+        yarn test:e2e
