--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,12 @@ jobs:
     - name: Build React App
       run: yarn build
 
+    - name: Upload build Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-folder
+        path: build
+
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
@@ -39,8 +45,12 @@ jobs:
         node-version: [16.x] 
     needs: build  # This job depends on the successful completion of the 'build' job
     steps:
+      - name: Download Build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-folder
       - name: Deploy Built Files 🚀
-        uses: JamesIves/github-pages-deploy-action@v4.1.1
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: build
 
