--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,11 @@ jobs:
         name: build-folder
         path: build
 
+    - shell: bash
+      run: |
+        pwd
+        ls -la
+
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
@@ -49,6 +54,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-folder
+
+      - shell: bash
+        run: |
+          pwd
+          ls -la /home/runner/work/my-react-app-with-ts/my-react-app-with-ts
+          
       - name: Deploy Built Files 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
