--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: build-folder
-        path: output/build
+        path: build
 
     - shell: bash
       run: |
@@ -52,6 +52,13 @@ jobs:
         node-version: [16.x] 
     needs: build  # This job depends on the successful completion of the 'build' job
     steps:
+      - shell: bash
+        run: |
+          pwd
+          ls -la
+          mkdir "build"
+          cd build
+          
       - name: Download Build artifacts
         uses: actions/download-artifact@v4
         with:
@@ -61,6 +68,7 @@ jobs:
         run: |
           pwd
           ls -la
+          cd ..
           
       - name: Deploy Built Files 🚀
         uses: JamesIves/github-pages-deploy-action@v4
