--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,9 +54,9 @@ jobs:
     steps:
       - shell: bash
         run: |
-          pwd
-          ls -la
+          pwd          
           mkdir "build"
+          ls -la
           cd build
           
       - name: Download Build artifacts
@@ -67,13 +67,12 @@ jobs:
       - shell: bash
         run: |
           pwd
-          ls -la
-          cd ..
+          ls -la          
           
       - name: Deploy Built Files 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: ~/home/runner/work/my-react-app-with-ts/my-react-app-with-ts
+          folder: build
 
   # Assuming you don't need a separate build step before testing (modify if needed)
   test:
