--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ci": "yarn install --immutable --immutable-cache --check-cache",
     "test": "react-scripts test",
     "test:e2e": "react-scripts test --testMatch=**\\.test\\.e2e\\.ts",
-    "local:test:e2e": "REACT_APP_SELENIUM_TEST_URL=http:localhost:3000 yarn test:e2e",
+    "local:test:e2e": "REACT_APP_SELENIUM_TEST_URL=http://localhost:3000/my-react-app-with-ts/ yarn test:e2e",
     "prod:test:e2e": "yarn test:e2e"
   },
   "jest": {
