--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "autoprefixer": "^10.4.19",
     "bootswatch": "^4.5.3",
+    "postcss": "^8.4.38",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^5.0.1",
     "selenium-webdriver": "^4.19.0",
+    "tailwindcss": "^3.4.3",
+    "typed.js": "^2.1.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
