--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.38",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "selenium-webdriver": "^4.19.0",
